--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.webp"/>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://edumart.dndts.net/files/shivashaktia3abe8.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>POS</title>
+    <title>Point of Sale</title>
   </head>
   <body>
     <div id="root"></div>
